--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="third-parties/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/business-frontpage.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <script src="third-parties/jquery/jquery.min.js"></script>
   <script src="js/custom.js"></script>
 
