--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           </div>
         </div>
       </div>
-      <p class="container">To see all visit my github</p>
+      <p class="container">To see all my projects visit my github</p>
     </div>
 
 <div class="container">
@@ -191,13 +191,12 @@
     ​<picture>
     <a title="Open Google play" class="mg-fluid col" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes" target="_blank"><img class="rounded mg-fluid" src="img/app.png" alt="Google Play"></a></p>
     </picture>
+    <a class="btn btn-success" target="_blank" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes">Link</a>
   </div>
 </div>
 </div>
 
 
-
-    
     <div class="row mt-2 container">
     <h2 class="mb-4">Cerifications</h2>
   </div>
@@ -205,9 +204,9 @@
       
     <ul class="list-group">
       <li class="list-group-item">TestDaF German C1</li>
-      <li class="list-group-item">Project management with Git and GitHub - Universidad politécnica de Madrid - 24 hours <a href="https://certificados.miriadax.net/93fw6bbg">Link</a></li>
-      <li class="list-group-item">Free Code Camp's Front End Development Programm - 400 hours <a href="https://www.freecodecamp.org/certification/foxneo/legacy-front-end">Link</a></li>
-      <li class="list-group-item">Free Code Camp's Responsive Web Design Programm - 300 hours <a href="https://www.freecodecamp.org/certification/foxneo/responsive-web-design">Link</a></li>
+      <li class="list-group-item">Project management with Git and GitHub - Universidad politécnica de Madrid - 24 hours <a target="_blank" href="https://certificados.miriadax.net/93fw6bbg">Link</a></li>
+      <li class="list-group-item">Free Code Camp's Front End Development Programm - 400 hours <a target="_blank" href="https://www.freecodecamp.org/certification/foxneo/legacy-front-end">Link</a></li>
+      <li class="list-group-item">Free Code Camp's Responsive Web Design Programm - 300 hours <a target="_blank" href="https://www.freecodecamp.org/certification/foxneo/responsive-web-design">Link</a></li>
     </ul>
     </div>
   </div>
