--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h2 class="mb-3">My non-commercial Google Play App</h2>
-    <p class="lead">German for travelers spanish speakers, it is a offline app for travelers who want to travel to Germany or Austria. This app is very practical and is divided by categories.</p>
+    <p class="lead">German for travelers is a offline app for spanish speakers travelers who want to travel to Germany, Switzerland or Austria. This app is very practical and is divided by categories.</p>
     ​<picture>
     <a title="Open Google play" class="mg-fluid col" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes" target="_blank"><img class="rounded mg-fluid" src="img/app.png" alt="Google Play"></a></p>
     </picture>
