--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="col-md-8 mb-5">
         <h2>About Me</h2>
         <hr>
-        <p>A Software Developer with 5 years profesional experience at a german company. I build Web and Mobile applications with JavaEE / Spring / Nodejs / Vuejs / Bootstrap and some other cool libraries and frameworks.</p>
+        <p>A Software Developer with Five years of profesional experience at a german company. I build Web and Mobile applications with JavaEE / Spring / Nodejs / Vuejs / Bootstrap and some other cool libraries and frameworks.</p>
         <p>I'm currently enrolled in college obtaining a degree in Computer Science with a concentration in Software development. I will be using this website to host a portfolio of webapps and certifications. Feel free to contact me and check out my code on Github. Have a great day!</p>
       </div>
       <div id="what-i-do" class="col-md-4 mb-5">
