--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <div class="col-md-8 mb-5">
         <h2>About Me</h2>
         <hr>
-        <p>A Software Developer with Five years of profesional experience at a german company. I build Web and Mobile applications with JavaEE / Spring / Nodejs / Vuejs / Bootstrap and some other cool libraries and frameworks.</p>
-        <p>I'm currently enrolled in college obtaining a degree in Computer Science with a concentration in Software development. I will be using this website to host a portfolio of webapps and certifications. Feel free to contact me and check out my code on Github. Have a great day!</p>
+        <p>A Software Developer with five years of profesional experience at a german company. I build Web and Mobile applications with JavaEE / Spring / Nodejs / Vuejs / Bootstrap and some other cool libraries and frameworks.</p>
+        <p>I'm currently enrolled in college obtaining a degree in Computer Science with a concentration in software development. I will be using this website to host a portfolio of webapps and certifications. Feel free to contact me and check out my code on Github. ¡Hasta la vista!</p>
       </div>
       <div id="what-i-do" class="col-md-4 mb-5">
         <h2>What i do</h2>
@@ -187,7 +187,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h2 class="mb-3">My non-commercial Google Play App</h2>
-    <p class="lead">German for travelers is a offline app for spanish speakers travelers who want to travel to Germany, Switzerland or Austria. This app is very practical and is divided by categories.</p>
+    <p class="lead">German for travelers is a offline app for spanish speaking travellers who want to travel to Germany, Switzerland or Austria. This app is very practical and is divided by categories.</p>
     <a title="Open Google play" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes" target="_blank"><img class="rounded mg-fluid" src="img/app.png" alt="Google Play"></a></p>
     <a class="btn btn-success" target="_blank" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes">Link</a>
   </div>
