--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +25,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Miguel Caceres</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -36,9 +38,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#about">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#what-i-do">What i do</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portfolio</a>
@@ -58,10 +57,15 @@
           <h1 id="home" class="display-4 mt-5 mb-2">Miguel's Online Portfolio
           </h1>
           <div class="center">
-          <a title="GitHub" href="https://github.com/foxneo" class="btn btn-dark" target="_blank">GitHub</a>
-          <a title="FreeCodeCamp" href="https://www.freecodecamp.org/foxneo" class="btn btn-dark" target="_blank">FreeCodeCamp</a>
-          <a title="Xing" href="https://www.xing.com/profile/Miguel_Caceres7/cv" class="btn btn-dark" target="_blank">Xing</a>
-        </div>
+            <a title="GitHub" href="https://github.com/foxneo" class="btn btn-dark" target="_blank">GitHub</a>
+            <a title="FreeCodeCamp" href="https://www.freecodecamp.org/foxneo" class="btn btn-dark"
+              target="_blank">FreeCodeCamp</a>
+            <a title="LinkedIn" href="https://www.linkedin.com/in/miguel-caceres-47265128b/" class="btn btn-dark"
+              target="_blank">LinkenIn</a>
+            <a title="Xing" href="https://www.xing.com/profile/Miguel_Caceres7/cv" class="btn btn-dark"
+              target="_blank">Xing</a>
+
+          </div>
         </div>
       </div>
     </div>
@@ -71,45 +75,32 @@
   <div class="container">
 
     <div id="about" class="row">
-      <div class="col-md-8 mb-5">
+      <div class="col-md-12 mb-5">
         <h2>About Me</h2>
         <hr>
-        <p>A Software Developer with five years of profesional experience at a german company. I build Web and Mobile applications with JavaEE / Spring / Nodejs / Vuejs / Bootstrap and some other cool libraries and frameworks.</p>
-        <p>I'm currently enrolled in college obtaining a degree in Computer Science with a concentration in software development. I will be using this website to host a portfolio of webapps and certifications. Feel free to contact me and check out my code on Github. ¡Hasta la vista!</p>
-      </div>
-      <div id="what-i-do" class="col-md-4 mb-5">
-        <h2>What i do</h2>
-        <hr>
-        <img class="icons" src="https://www.flaticon.com/svg/static/icons/svg/152/152760.svg" width="50">
-        <img class="icons" src="https://image.flaticon.com/icons/png/512/721/721671.png" width="50">
-        <img class="icons" src="https://www.flaticon.com/svg/static/icons/svg/732/732190.svg" width="50">
-        <img class="icons" src="https://www.flaticon.com/svg/static/icons/svg/1051/1051277.svg" width="50">
-     
-      <div class="mt-3">
-        <img class="icons" src="https://www.flaticon.com/svg/static/icons/svg/919/919853.svg" width="50">
-        <img class="icons" src="https://www.flaticon.com/svg/static/icons/svg/2111/2111425.svg" width="50">
-        <img class="icons" src="https://www.flaticon.com/premium-icon/icons/svg/2383/2383158.svg" width="50">
-        <img class="icons" src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Maven_logo.svg" width="50">
-      </div>
-      <div class="mt-3">
-        <img class="icons" src="https://www.flaticon.com/svg/static/icons/svg/634/634909.svg" width="50">
-        <img class="icons" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/db/Npm-logo.svg/1920px-Npm-logo.svg.png" width="50">
-      </div>
-
-
-
+        <p>A Software Developer with eight years of profesional experience at a german company. I build Web and Mobile
+          applications with JavaEE / Spring / Nodejs / Vuejs / Bootstrap and some other cool libraries and frameworks.
+        </p>
+        <p>
+          Explore a diverse range of projects I have worked on, from web and mobile applications to backend systems.
+          Each project represents a unique challenge I've tackled and a solution I've crafted to make a positive impact.
+          I will be using this website to host a portfolio of webapps and certifications. Feel free to contact me and
+          check out my code on Github. ¡Hasta la vista!</p>
       </div>
     </div>
     <!-- /.row -->
 
-      <h2 class="mb-3">Open Source Projects</h2>
+    <h2 class="mb-3">Open Source Projects</h2>
     <div id="portfolio" class="row">
       <div class="col-md-4 mb-5">
         <div class="card h-100">
-          <img class="card-img-top" src="https://raw.githubusercontent.com/billthefarmer/billthefarmer.github.io/master/images/Editor-syntax.png" alt="editor">
+          <img class="card-img-top"
+            src="https://raw.githubusercontent.com/billthefarmer/billthefarmer.github.io/master/images/Editor-syntax.png"
+            alt="editor">
           <div class="card-body">
             <h4 class="card-title">Editor</h4>
-            <p class="card-text">Android simple generic text editor. The app is available from F-Droid and Google Play</p>
+            <p class="card-text">Android simple generic text editor. The app is available from F-Droid and Google Play
+            </p>
           </div>
           <div class="card-footer">
             <a target="_blank" href="https://github.com/billthefarmer/editor" class="btn btn-primary">GitHub</a>
@@ -118,10 +109,13 @@
       </div>
       <div class="col-md-4 mb-5">
         <div class="card h-100">
-          <img class="card-img-top" src="https://www.webagentur089.de/static/media/uploads/blog/amazon-web-services/.thumbnails/amazonwebservices_logo.png/amazonwebservices_logo-800x0.png" alt="aws">
+          <img class="card-img-top"
+            src="https://www.webagentur089.de/static/media/uploads/blog/amazon-web-services/.thumbnails/amazonwebservices_logo.png/amazonwebservices_logo-800x0.png"
+            alt="aws">
           <div class="card-body">
             <h4 class="card-title">VR superball game</h4>
-            <p class="card-text">Hackathon project, through amazon web service and alexa it is possible to control a character by voice in a VR video game</p>
+            <p class="card-text">Hackathon project, through amazon web service and alexa it is possible to control a
+              character by voice in a VR video game</p>
           </div>
           <div class="card-footer">
             <a href="https://github.com/Breakfast-Hackers" class="btn btn-primary">GitHub</a>
@@ -130,7 +124,8 @@
       </div>
       <div class="col-md-4 mb-5">
         <div class="card h-100">
-          <img class="card-img-top" src="https://www.flaticon.com/svg/static/icons/svg/455/455691.svg" height="100" alt="">
+          <img class="card-img-top" src="https://avatars.githubusercontent.com/u/39000845?s=200&v=4" height="200"
+            alt="">
           <div class="card-body">
             <h4 class="card-title">BChainIdentify</h4>
             <p class="card-text">Hackathon Project group working on an open source blockchain authenticator.</p>
@@ -146,7 +141,9 @@
     <div class="row">
       <div class="col-md-4 mb-5">
         <div class="card h-100">
-          <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/QR_code_for_mobile_English_Wikipedia.svg/1024px-QR_code_for_mobile_English_Wikipedia.svg.png" alt="qr">
+          <img class="card-img-top"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/QR_code_for_mobile_English_Wikipedia.svg/1024px-QR_code_for_mobile_English_Wikipedia.svg.png"
+            alt="qr" height="300">
           <div class="card-body">
             <h4 class="card-title">logistics QR app</h4>
             <p class="card-text">Hackathon project with server and client to store products by scanning their code</p>
@@ -180,32 +177,61 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h4 class="card-title"> Hashes generator without Backend </h4>
+            <p class="card-text">A MD5, SHA-256, SHA-3 Hash generator.</p>
+          </div>
+          <div class="card-footer">
+            <a target="_blank" href="https://foxneo.github.io/CryptoProjectsJS/" class="btn btn-primary">GitHub</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h4 class="card-title"> Hacknet-timer </h4>
+            <p class="card-text">A fan made UI from the videogame Hacknet. Hacknet is a modern, hacking game created by:
+              Matt Trobbiani</p>
+          </div>
+          <div class="card-footer">
+            <a target="_blank" href="https://github.com/FoxNeo/hacknet-timer" class="btn btn-primary">GitHub</a>
+          </div>
+        </div>
+      </div>
       <p class="container">To see all my projects visit my github</p>
     </div>
 
-<div class="container">
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h2 class="mb-3">My non-commercial Google Play App</h2>
-    <p class="lead">German for travelers is a offline app for spanish speaking travellers who want to travel to Germany, Switzerland or Austria. This app is very practical and is divided by categories.</p>
-    <a title="Open Google play" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes" target="_blank"><img class="rounded mg-fluid" src="img/app.png" alt="Google Play"></a></p>
-    <a class="btn btn-success" target="_blank" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes">Link</a>
-  </div>
-</div>
-</div>
+    <div class="container">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h2 class="mb-3">My non-commercial Google Play App</h2>
+          <p class="lead">German for travelers is a offline app for spanish speaking travellers who want to travel to
+            Germany, Switzerland or Austria. This app is very practical and is divided by categories.</p>
+          <a title="Open Google play" href="https://play.google.com/store/apps/details?id=com.deutschparaviajes"
+            target="_blank"><img class="rounded mg-fluid" src="img/app.png" alt="Google Play"></a></p>
+          <a class="btn btn-success" target="_blank"
+            href="https://play.google.com/store/apps/details?id=com.deutschparaviajes">Link</a>
+        </div>
+      </div>
+    </div>
 
 
     <div class="row mt-2 container">
-    <h2 class="mb-4">Cerifications</h2>
-  </div>
+      <h2 class="mb-4">Cerifications</h2>
+    </div>
     <div id="certifications" class="row mb-5 container">
-      
-    <ul class="list-group">
-      <li class="list-group-item">TestDaF German C1</li>
-      <li class="list-group-item">Project management with Git and GitHub - Universidad politécnica de Madrid - 24 hours <a target="_blank" href="https://certificados.miriadax.net/93fw6bbg">Link</a></li>
-      <li class="list-group-item">Free Code Camp's Front End Development Programm - 400 hours <a target="_blank" href="https://www.freecodecamp.org/certification/foxneo/legacy-front-end">Link</a></li>
-      <li class="list-group-item">Free Code Camp's Responsive Web Design Programm - 300 hours <a target="_blank" href="https://www.freecodecamp.org/certification/foxneo/responsive-web-design">Link</a></li>
-    </ul>
+
+      <ul class="list-group">
+        <li class="list-group-item">Bachelor of Science in Computer Science (B.Sc. CS) Bremen University</li>
+        <li class="list-group-item">TestDaF German C1</li>
+        <li class="list-group-item">Free Code Camp's Front End Development Programm - 400 hours <a target="_blank"
+            href="https://www.freecodecamp.org/certification/foxneo/legacy-front-end">Link</a></li>
+        <li class="list-group-item">Free Code Camp's Responsive Web Design Programm - 300 hours <a target="_blank"
+            href="https://www.freecodecamp.org/certification/foxneo/responsive-web-design">Link</a></li>
+      </ul>
     </div>
   </div>
   <!-- /.container -->
@@ -213,15 +239,16 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white"><img class="icons" src="https://www.flaticon.com/svg/static/icons/svg/2111/2111425.svg" width="50"></p>
+      <p class="m-0 text-center text-white"><img class="icons"
+          src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="50"></p>
       <br>
-      <p class="text-white text-center">Icons by flaticon and Wikipedia</p>
+      <p class="text-white text-center">Hosted by Github</p>
     </div>
     <!-- /.container -->
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-  
+
   <script src="third-parties/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
