Fix Typo in Text
typo =>Cerifications

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 
     <div class="row mt-2 container">
-      <h2 class="mb-4">Cerifications</h2>
+      <h2 class="mb-4">Certifications</h2>
     </div>
     <div id="certifications" class="row mb-5 container">
 
